--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,13 +18,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./fwcscoreboardlib
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 21
+    - name: Set up JDK 23
       uses: actions/setup-java@v4
       with:
-        java-version: '21'
+        java-version: '23'
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
